--- a/index.html
+++ b/index.html
@@ -423,6 +423,7 @@
     </script>
     <!-- SPA Routing Support for GitHub Pages -->
     <script>
+      // Handle redirects from 404.html
       (function(l) {
         if (l.search[1] === '/' ) {
           var decoded = l.search.slice(1).split('&').map(function(s) { 
