--- a/404.html
+++ b/404.html
@@ -11,16 +11,20 @@
     
     <!-- Redirect Script voor SPA -->
     <script>
-      // GitHub Pages SPA fallback
-      var segmentCount = 0;
-      var l = window.location;
-      l.replace(
-        l.protocol + '//' + l.hostname + (l.port ? ':' + l.port : '') +
-        l.pathname.split('/').slice(0, 1 + segmentCount).join('/') + '/?/' +
-        l.pathname.slice(1).split('/').slice(segmentCount).join('/').replace(/&/g, '~and~') +
-        (l.search ? '&' + l.search.slice(1).replace(/&/g, '~and~') : '') +
-        l.hash
-      );
+      // GitHub Pages SPA fallback - redirect to main site with path info
+      (function(l) {
+        if (l.search) {
+          var path = l.search.slice(1).split('&')[0];
+          if (path) {
+            window.history.replaceState(null, null, l.pathname.slice(0, -1) + path + l.hash);
+          }
+        }
+      }(window.location));
+      
+      // Immediate redirect to main index.html for all 404s
+      setTimeout(function() {
+        window.location.href = '/xenra-public-data/';
+      }, 100);
     </script>
 </head>
 <body>
